# graphql-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  package.json
.github/: dependabot.yml
.github/workflows/: nodejs.yml  rust.yml
graphql-rs/src/language/: source.rs
graphql_rs_native/: Cargo.toml
graphql_rs_native/benches/: github-schema.graphql  graphql_rs_native_benchmark.rs
graphql_rs_native/src/: lib.rs
graphql_rs_native/src/language/: ast.rs  mod.rs  parser.rs  predicates.rs  printer.rs  source.rs  visitor.rs
graphql_rs_native/src/language/snapshots/: parser__language::parser::test_document_2.snap  parser__language::parser::test_document_2.snap.new  parser__language::parser::test_document_3.snap  tests__definition.snap  tests__document_1.snap  tests__document_2.snap  tests__document_3.snap  tests__fields_definition.snap  tests__fields_definition_x.snap  tests__float_value.snap  tests__language::parser::tests::test_definition.snap  tests__language::parser::tests::test_document_1.snap  tests__language::parser::tests::test_document_2.snap  tests__language::parser::tests::test_document_3.snap  tests__language::parser::tests::test_fields_definition.snap  tests__language::parser::tests::test_fields_definition_x.snap  tests__language::parser::tests::test_float_value.snap  tests__language::parser::tests::test_object_definition_1.snap  tests__language::parser::tests::test_object_definition_2.snap  tests__language::parser::tests::test_object_definition_3.snap  tests__language::parser::tests::test_schema_definition.snap  tests__language::parser::tests::test_string_value_1.snap  tests__language::parser::tests::test_string_value_2.snap  tests__language::parser::tests::test_string_value_3.snap  tests__language::parser::tests::test_string_value_4.snap  tests__language::parser::tests::test_string_value_5.snap  tests__language::parser::tests::test_string_value_6.snap  tests__language::parser::tests::test_type_definition_1.snap  tests__language::parser::tests::test_type_system_definition.snap  tests__language::parser::tests::test_union_definition_1.snap  tests__object_definition_1.snap  tests__object_definition_2.snap  tests__object_definition_3.snap  tests__schema_definition.snap  tests__string_value_1.snap  tests__string_value_2.snap  tests__string_value_3.snap  tests__string_value_4.snap  tests__string_value_5.snap  tests__string_value_6.snap  (+3 more)
lib/__tests__/: parser-test.js
lib/__tests__/__snapshots__/: parser-test.js.snap
lib/scripts/: compare.js
native/: Cargo.toml
native/src/: lib.rs
native/src/language/: ast.rs  mod.rs  parser.rs  source.rs
