[package]
name = "graphql_rs_native"
version = "0.0.5"
authors = ["Nigel Schuster <Neitsch@users.noreply.github.com>"]
license = "MIT"
edition = "2018"
description = "An attempt to write a rust implementation of graphql-js that is very close to the reference implementation and can be used via https://www.npmjs.com/package/graphql-rs."

[lib]
name = "graphql_rs_native"

[dependencies]
nom = "4.2.3"
serde_derive = "1.0.80"
serde = "1.0.80"

[badges]
travis-ci = { repository = "neitsch/graphql-rs", branch = "master" }