[package]
name = "graphql_rs_native"
version = "0.0.5"
authors = ["Nigel Schuster <Neitsch@users.noreply.github.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Neitsch/graphql-rs.git"
homepage = "https://github.com/Neitsch/graphql-rs/tree/master/graphql_rs_native"
description = "An attempt to write a rust implementation of graphql-js that is very close to the reference implementation and can be used via https://www.npmjs.com/package/graphql-rs."

[lib]
name = "graphql_rs_native"

[dependencies]
nom = "5.0.0"
serde_derive = "1.0.80"
serde = "1.0.80"

[badges]
travis-ci = { repository = "neitsch/graphql-rs", branch = "master" }

[dev-dependencies]
criterion = "0.3"
insta = "1.7.1"

[[bench]]
name = "graphql_rs_native_benchmark"
harness = false