[package]
name = "graphql-rs"
version = "0.0.1"
authors = ["Nigel Schuster <Neitsch@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "graphql_rs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
