[package]
name = "graphql_rs_ffi"
version = "0.0.1"
authors = ["Nigel Schuster <Neitsch@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "graphql_rs_ffi"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
nom = "4.2.3"
neon-serde = "0.1.1"
serde_derive = "1.0.80"
serde = "1.0.80"
graphql_rs_native = {path="../graphql_rs_native"}